# madr_postgres

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipleline.yaml
madr_postgres/: app.py
madr_postgres/core/: exception_handlers.py  security.py
madr_postgres/db/: base.py  database.py
madr_postgres/exceptions/: auth.py  base.py  users.py
madr_postgres/models/: __init__.py  authors.py  books.py  users.py
madr_postgres/repositories/: auth.py  authors.py  books.py  users.py
madr_postgres/routers/: auth.py  authors.py  books.py  health.py  users.py
madr_postgres/schemas/: authors.py  books.py  filter.py  users.py
madr_postgres/services/: auth.py  authors.py  books.py  users.py
madr_postgres/utils/: sanitize.py
migrations/: env.py
migrations/versions/: 602159a45d34_alter_field_updated.py  87c4348c1038_field_title_unique.py  a156723d3f6c_create_tables.py
tests/: conftest.py  test_db_authors.py  test_db_books.py  test_db_users.py  test_health.py
tests/auth/: test_token.py
tests/authors/: factory.py  test_create.py  test_delete.py  test_patch.py  test_read.py
tests/books/: factory.py  test_create.py  test_delete.py  test_patch.py  test_read.py
tests/users/: conftest.py  factory.py  test_create.py  test_delete.py  test_patch.py
